projects/14-log-leaning/05-src/terraform/modules/vpc/vpc.tf
# VPCリソース定義
resource "aws_vpc" "log_leaning" {
	cidr_block           = var.vpc_cidr
	enable_dns_support   = true
	enable_dns_hostnames = true
	tags = {
		Name = var.vpc_name
	}
}
